<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.PaymentSuccessActivity"
        android:id="@+id/paymentSuccessMainConstraintLayout"
        android:background="@android:color/white">

    <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:id="@+id/paymentSuccessNestedScrollView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/paymentSuccessDismissButton">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/paymentSuccessScrollViewConstraintLayout">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/paymentSuccessHeaderLayout"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="64dp"
                    android:layout_marginStart="64dp">

                <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:srcCompat="@drawable/ic_success"
                        android:id="@+id/paymentSuccessHeaderImage"
                        />

                <TextView
                        android:text="@string/payment_success_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/paymentSuccessHeaderText"
                        android:textSize="@dimen/mediumFontSize"
                        android:textColor="@color/colorTextDark"
                        android:textStyle="bold"
                        android:gravity="center"/>

                <TextView
                        android:text="@string/payment_success_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/paymentSuccessHeaderDescription"
                        android:textSize="@dimen/normalFontSize"
                        android:textColor="@color/colorTextLight"
                        android:gravity="center"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
            android:text="@string/payment_success_dismiss_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/paymentSuccessDismissButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="@dimen/mediumFontSize"
            android:background="@drawable/bottom_button_primary"
            android:textColor="@color/colorTextWhite"/>
</androidx.constraintlayout.widget.ConstraintLayout>