<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity"
        android:id="@+id/mainParentConstraintLayout"
        android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mainTopBarLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bottom_border_white_background">

        <TextView
                android:text="@string/main_activity_top_bar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mainTopBarTitle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="@dimen/mediumFontSize"
                android:textColor="@color/colorTextDark"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/mainTopBarLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/startShoppingButton"
            android:id="@+id/mainPrimaryConstraintLayout">

        <androidx.core.widget.NestedScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fillViewport="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/mainPrimaryNestedScrollView">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16sp"
                    android:id="@+id/mainPrimaryNestedScrollLinearLayout">

                <TextView
                        android:text="@string/main_activity_past_purchases_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/mainPrimaryTransactionsHeader"
                        android:layout_marginTop="16sp"
                        android:textSize="@dimen/mediumFontSize"
                        android:textColor="@color/colorTextDark"
                        android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/mainPrimaryPurchasesRecycler"
                        android:layout_marginTop="4sp"
                        android:nestedScrollingEnabled="false"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/mainTopBarLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/startShoppingButton"
            android:id="@+id/mainNoTxnsLayout"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16sp"
            android:visibility="gone">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/receipt_illustration"
                android:id="@+id/mainNoTxnsImage"/>

        <TextView
                android:text="@string/main_activity_no_txns_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mainNoTxnsText"
                android:gravity="center"
                android:textColor="@color/colorTextDark"
                android:textSize="@dimen/normalFontSize"/>
    </LinearLayout>

    <Button
            android:text="@string/main_activity_start_shopping_button"
            android:layout_width="0dp"
            android:layout_height="60sp"
            android:id="@+id/startShoppingButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorTextWhite"
            android:textSize="@dimen/mediumFontSize"/>

</androidx.constraintlayout.widget.ConstraintLayout>