<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ShoppingActivity"
        android:id="@+id/shoppingParentConstraintLayout"
        android:background="@android:color/white">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/shoppingAddItemFAB"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:focusable="true"
            android:src="@drawable/ic_add_white"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/shoppingCheckoutButton"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bottom_border_white_background"
            android:id="@+id/shoppingTopBarConstraintLayout">

        <TextView
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shoppingCancelButton"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8sp"
                android:layout_marginTop="8sp"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="@dimen/mediumFontSize"
                android:textColor="@color/colorPrimary"
                android:padding="8sp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shoppingStoreTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/shoppingCancelButton"
                tools:text="Test Store"
                android:textSize="@dimen/largeFontSize"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/colorTextDark"
                android:textStyle="bold"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="1.0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/shoppingTopBarConstraintLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/shoppingMainNestedScrollview"
            android:overScrollMode="never"
            app:layout_constraintBottom_toTopOf="@+id/shoppingCheckoutButton">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shoppingNestedConstraintLayout">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    android:id="@+id/shoppingCostSummaryLinearLayout">

                <TextView
                        android:text="@string/cost_summary_total_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/shoppingTotalAmountLabel"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="32dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="32dp"
                        android:textSize="@dimen/normalFontSize"
                        android:textColor="@color/colorTextLight"
                        tools:layout_editor_absoluteY="156dp"
                        android:gravity="center"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/shoppingTotalAmount"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="32dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="32dp"
                        tools:text="$ 0.00"
                        app:layout_constraintTop_toBottomOf="@+id/shoppingTotalAmountLabel"
                        android:textSize="@dimen/largeFontSize"
                        android:textStyle="bold"
                        android:textColor="@color/colorTextDark"
                        android:gravity="center"/>

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/shoppingCostSummarySubtotalLayout"
                        >

                    <TextView
                            android:text="@string/subtotal_label"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/shoppingSubtotalLabel"
                            android:layout_weight="1"
                            android:paddingEnd="4sp"
                            android:gravity="end"
                            android:textSize="@dimen/normalFontSize"
                            android:textColor="@color/colorTextLight"/>

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/shoppingSubtotal"
                            android:layout_weight="1"
                            tools:text="$0.00"
                            android:paddingStart="4sp"
                            android:textSize="@dimen/normalFontSize"
                            android:textStyle="bold"
                            android:textColor="@color/colorTextLight"/>
                </LinearLayout>

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/shoppingCostSummaryTaxesLayout"
                        >

                    <TextView
                            android:text="@string/taxes_label"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/shoppingTaxesLabel"
                            android:layout_weight="1"
                            android:paddingEnd="4sp"
                            android:gravity="end"
                            android:textSize="@dimen/normalFontSize"
                            android:textColor="@color/colorTextLight"/>

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/shoppingTaxes"
                            android:layout_weight="1"
                            tools:text="$0.00"
                            android:paddingStart="4sp"
                            android:textSize="@dimen/normalFontSize"
                            android:textStyle="bold"
                            android:textColor="@color/colorTextLight"/>
                </LinearLayout>

            </LinearLayout>

            <Space
                    android:layout_width="0dp"
                    android:layout_height="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/shoppingBelowAmountSpace"
                    app:layout_constraintTop_toBottomOf="@+id/shoppingCostSummaryLinearLayout"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/thick_bottom_border_white_background"
                    android:id="@+id/cartHeaderLinearLayout"
                    app:layout_constraintTop_toBottomOf="@+id/shoppingBelowAmountSpace"
                    >

                <TextView
                        android:text="@string/cart_heading_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/shoppingCartLabel"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textSize="@dimen/normalFontSize"
                        android:textColor="@color/colorTextDark"
                        app:layout_constraintTop_toBottomOf="@+id/shoppingBelowAmountSpace"
                        app:layout_constraintEnd_toStartOf="@+id/shoppingClearCartButton"
                        app:layout_constraintHorizontal_bias="0.0"
                        android:layout_weight="1"/>

                <TextView
                        android:text="@string/shopping_activity_clear_cart_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/shoppingClearCartButton"
                        android:textSize="@dimen/normalFontSize"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:gravity="end"
                        android:padding="4sp"
                        tools:layout_editor_absoluteY="111dp"
                        android:paddingStart="8sp"
                        />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="16dp"
                    android:id="@+id/shoppingItemsRecycler"
                    android:nestedScrollingEnabled="false"
                    android:layout_marginBottom="64dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/cartHeaderLinearLayout"
                    app:layout_constraintVertical_bias="0.0"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
            android:text="@string/shopping_activity_checkout_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/shoppingCheckoutButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:background="@drawable/bottom_button_primary"
            android:textColor="@color/colorTextWhite"
            android:textSize="@dimen/mediumFontSize"/>

</androidx.constraintlayout.widget.ConstraintLayout>